package domain;

public class DateVO {

    private final String date;

    public DateVO(String date) {
        this.date = date;
    }

    public String getDate() {
        return date;
    }

}
