package api;

public enum ArgsStartWith {
    date,start,end
}
