package domain;

public class EndHourVO {
    private final int value;

    public EndHourVO(int endH) {
        this.value = endH;
    }

    public int getValue() {
        return value;
    }
}
