package domain;

public class EndMinutesVO {
    private final int value;

    public EndMinutesVO(int endM) {
        this.value = endM;
    }

    public int getValue() {
        return value;
    }
}
