package domain;

public interface INowRepository {
    public String currentTime = null;

    public String getCurrentTime();
}
