package domain.Japan;

public class StartVO {
    private final String value;
    //private final String end;

    public StartVO(String value) {
        this.value = value;
    }

    public String getValue() {
        return value;
    }

}
