package domain;

public class StartMinutesVO {
    private final int value;

    public StartMinutesVO(int startM) {
        this.value = startM;
    }

    public int getValue() {
        return value;
    }
}
