@startuml
'コメントアウト

class Api {
  main()
  inputController()
  totalController()
}


class  Service {
  input()
  total()
}

class Domain {
  input()
  total()
}

interface IRepository {
  writeData()
  readData()
}

interface INowRepository {
  getCurrentTime()
}

interface ICalcWorkTimeVO {
  getWorkTime()
  getOverWorTime()
}


class RepositoryDb implements IRepository {
  writeData()
  readData()
} 

class NowRepository implements INowRepository {
  getCurrentTime()
}

class CalcWorkTimeVO implements ICalcWorkTimeVO {
  workTime
  overWorkTime
  tmpBreakTime
  getWorkTime()
  getOverWorTime()
}



class ArgsCheckVO {
  checkArgsLength()
  getMethodtype()
  checkArgsStartWith()
  getValue()
  inputCheckArgsLength()
  totalCheckArgsLength()
  getArgs()
}

enum MethodType {
  input
  total
}

enum ArgsStartWith {
  date
  start
  end
}

class DateVO {
  value
  getValue()
}


class StartTimeVO {
  StartVO start
  StartHourVO startHour
  StartMinutesVO startMinutes
  getValue()
  getTotalMinutes()
}


class EndTimeVO {
  EndVO end
  EndHourVO endHour
  EndMinutes endMinutes
  getValue()
  getHour()
  getMinutes()
  getTotalMinutes()
}

class ValueAdjustVO {
  getIntStartH()
  getIntStartM()
  getIntEndH()
  getIntEndM()
  getDate()
  getStart()
  getEnd()
}

class StartVO {
  String value
  getValue()
}

class StartHourVO {
  int value
  getValue()
}

class StartMinutesVO {
  int value
  getValue()
}

class EndVO {
  String value
  getValue()
}

class EndHourVO {
  int value
  getValue()
}

class EndMinutesVO {
  int value
  getValue()
}


Api -down-> Service
Service -down-> Domain
Domain -down-> IRepository
Domain -down-> INowRepository
Domain -down-> ICalcWorkTimeVO

Api -right-> ArgsCheckVO
ArgsCheckVO -right-> MethodType
ArgsCheckVO -right-> ArgsStartWith
Api -right-> ValueAdjustVO

Domain -right-> DateVO
Domain -right-> StartTimeVO
Domain -right-> EndTimeVO

StartTimeVO --> StartVO
StartTimeVO --> StartHourVO
StartTimeVO --> StartMinutesVO

EndTimeVO --> EndVO
EndTimeVO --> EndHourVO
EndTimeVO --> EndMinutesVO

@enduml
